Validate raw generic injection ambiguity